--- a/biostatistics.html
+++ b/biostatistics.html
@@ -126,7 +126,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://engineering.oregonstate.edu/bioengineering'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineering.oregonstate.edu/bioengineering'>
     Bioengineering Graduate Programs | College of Engineering | Oregon State University  </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-10</p>
@@ -175,7 +175,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-4417'>Principal Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-4417'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
@@ -201,7 +201,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='http://www.csulb.edu/academic-affairs/faculty-affairs/assistant-professor-of-biological-anthropology-2578'>Assistant Professor of Biological Anthropology 2578 | California State University, Long Beach</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://www.csulb.edu/academic-affairs/faculty-affairs/assistant-professor-of-biological-anthropology-2578'>Assistant Professor of Biological Anthropology 2578 | California State University, Long Beach</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -219,7 +219,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Praha 5, Czech Republic</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n86hJLwu'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n86hJLwu'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
@@ -227,7 +227,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -269,7 +269,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/o4rAafwZ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/o4rAafwZ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -277,7 +277,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -319,7 +319,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -343,7 +343,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nNBctLwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nNBctLwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
@@ -351,7 +351,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=ofqAafw9&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nhR5sLwV'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=ofqAafw9&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nhR5sLwV'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
@@ -416,7 +416,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-16</p>
 <hr/>
-<h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 8, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
@@ -451,7 +451,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p><span class="badge badge-light">Redwood City California, United States</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://external-careers.jobs.unsw.edu.au/cw/en/job/497407/associate-professor-biostatistics'>Jobs - Job Details - Associate Professor - Biostatistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://external-careers.jobs.unsw.edu.au/cw/en/job/497407/associate-professor-biostatistics'>Jobs - Job Details - Associate Professor - Biostatistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-06</p>
 <hr/>
@@ -472,13 +472,13 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-01</p>
 <hr/>
-<h5><a href='https://mainebhr.recruiterbox.com/jobs/fk031bf/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mainebhr.recruiterbox.com/jobs/fk031bf/'>
     IF&W Senior Resource Biologist - Fisheries - 1111 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-01</p>
 <hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031bf'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031bf'>
     IF&amp;W Senior Resource Biologist - Fisheries - 1111 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
