--- a/statistics.html
+++ b/statistics.html
@@ -83,7 +83,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mihin.applytojob.com/apply/2CLJKJK1YH/Statistical-Analyst'>Statistical Analyst - MiHIN - Career Page</a></h5> 
+<h5><a href='https://mihin.applytojob.com/apply/2CLJKJK1YH/Statistical-Analyst'>Statistical Analyst - MiHIN - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... The Statistical Analyst is responsible for supporting MiHIN's organizational 
 reporting needs by analyzing the data and presenting the findings to the 
@@ -147,7 +147,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.sgul.ac.uk/Vacancy.aspx?ref=352-19'>
+<h5><a href='https://jobs.sgul.ac.uk/Vacancy.aspx?ref=352-19'>
 	352-19 Research Lecturer (2 posts), Lecturer in Medical Statistics (1 post), Lecturer in Infection &amp; Immunity (1 post) - Jobs at St. George's
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -161,11 +161,11 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -212,7 +212,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 validation plan and blinded data review; - Performs SAS programming to 
 generate?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=ddb1578c1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=ddb1578c1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -224,7 +224,7 @@ generate?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/cascade-climate-statistics-postdoctoral-scholar-2253'>CASCADE Climate Statistics Postdoctoral Scholar - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/cascade-climate-statistics-postdoctoral-scholar-2253'>CASCADE Climate Statistics Postdoctoral Scholar - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley Berkeley</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -255,11 +255,11 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.amstat.org/jobs/12931623/tenure-track-teaching-faculty-position-statistics-and-data-science'>Tenure Track Teaching Faculty Position - Statistics and Data Science, Employment | AMSTAT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.amstat.org/jobs/12931623/tenure-track-teaching-faculty-position-statistics-and-data-science'>Tenure Track Teaching Faculty Position - Statistics and Data Science, Employment | AMSTAT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.uic.edu/job-board/job-details?jobID=120384'>Job Details: Tenured/Tenure-Track Faculty - Business Statistics/Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.uic.edu/job-board/job-details?jobID=120384'>Job Details: Tenured/Tenure-Track Faculty - Business Statistics/Analytics</a></h5> 
 <p><span class="badge badge-light">Chicago Rockford  Chicago</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -275,7 +275,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/flagshippioneeringinc/jobs/4387857002'>Job Application for Scientist, Statistical Genetics at Flagship Pioneering, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flagshippioneeringinc/jobs/4387857002'>Job Application for Scientist, Statistical Genetics at Flagship Pioneering, Inc.</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -303,7 +303,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Springfield, Virginia</span></p>
 <p>Posted on:: 2019-10-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sertis/jobs/4475605002'>Job Application for Statistical Analyst at Sertis</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sertis/jobs/4475605002'>Job Application for Statistical Analyst at Sertis</a></h5> 
 <p><span class="badge badge-light">Bangkok</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -320,7 +320,7 @@ created School of Data Science, and other departments and schools. Faculty?...</
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>12 hours ago ... Experience of collaborative research (including creating and maintaining data 
 files, writing application programs within a statistical software, analyzing data,?...</p>
@@ -343,7 +343,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Rockville, MD Rockville, MD North America United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-rockville-md-client-dedicated-31335'>Sr Statistical Programmer, Rockville, MD - Client Dedicated - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-rockville-md-client-dedicated-31335'>Sr Statistical Programmer, Rockville, MD - Client Dedicated - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Rockville, MD Rockville, MD North America United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -429,7 +429,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/040ECF198D'>Statistics & Data Corporation (SDC) - Jobs: Statistical Programmer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/040ECF198D'>Statistics & Data Corporation (SDC) - Jobs: Statistical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -491,7 +491,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
